--- a/dash.css
+++ b/dash.css
@@ -333,18 +333,26 @@ footer {
     grid-gap: 20px;
     width: 100%;
     padding: 20px;
-    padding-top: 0;
+    padding-top: 20px;
+    padding-left: 150px;
 }
 
 .chart {
     background: #fff;
+    height: 100%;
+    max-height: 600;
     width: 100%;
+    max-width: 1200px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     grid-column: span 2;
 }
 .line_chart{
+    height: 100%;
+    max-height: 1000;
+    width: 100%;
+    max-width: 1200px;
     background: #fff;
     width: 100%;
     padding: 20px;
